Backendwithsf/force-app/main/default/objects/Product_dmart__c/Product_dmart__c.object-meta.xml
<CustomObject>
    <label>Product dmart</label>
    <nameField>
        <label>Product dmart Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product dmarts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>