Backendwithsf/force-app/main/default/objects/Product_dmart__c/fields/Badge__c.field-meta.xml
<CustomField>
    <fullName>Badge__c</fullName>
    <label>Badge</label>
    <length>100</length>
    <type>Text</type>
</CustomField>