Backendwithsf/force-app/main/default/objects/Product_dmart__c/fields/Emoji__c.field-meta.xml
<CustomField>
    <fullName>Emoji__c</fullName>
    <label>Emoji</label>
    <length>10</length>
    <type>Text</type>
</CustomField>