Backendwithsf/force-app/main/default/objects/Product_dmart__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <label>Image URL</label>
    <length>120</length>
    <type>Text</type>
</CustomField>