Backendwithsf/force-app/main/default/objects/Product_dmart__c/fields/Product_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Product_Image_URL__c</fullName>
    <label>Product Image URL</label>
    <length>120</length>
    <type>Text</type>
</CustomField>