Backendwithsf/force-app/main/default/objects/Product_dmart__c/validationRules/Valid_Price_and_MRP.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Price_and_MRP</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    Price__c &lt; 0,
    Price__c &gt; MRP__c
)</errorConditionFormula>
    <errorDisplayField>Price__c</errorDisplayField>
    <errorMessage>Price cannot be negative and must be less than or equal to the MRP.</errorMessage>
</ValidationRule>